Fixing minor layout issues "team"

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -239,6 +239,7 @@ header {
 
   .my-container {
     display: inline-table;
+    padding: 50px 0;
   }
 
   .member {
